force-app/volunteers/objects/Contact/fields/LastVolunteerDate__c.field-meta.xml
<CustomField>
    <fullName>LastVolunteerDate__c</fullName>
    <inlineHelpText>As reported on Volunteer Hours Logs. If a volunteer has signed up for an activity but not yet logged hours, that will not be represented here.</inlineHelpText>
    <label>Last Volunteer Date</label>
    <type>Date</type>
</CustomField>