force-app/volunteers/objects/Contact/fields/VolunteerHours__c.field-meta.xml
<CustomField>
    <fullName>VolunteerHours__c</fullName>
    <label>Volunteer Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>